--- a/App/Views/index/subscribe.phtml
+++ b/App/Views/index/subscribe.phtml
@@ -13,6 +13,12 @@
           </div>
         </div>
 
+        <?php if (isset($_GET['error']) && $_GET['error'] == 'str_length') { ?>
+          <div class="bg-danger text-white rounded p-3 m-3">
+            Os campos tem menos que 3 caracteres.
+          </div>
+        <?php } ?>
+
         <div class="row">
           <div class="col">
             
@@ -22,7 +28,7 @@
               </div>
               
               <div class="form-group">
-                <input type="text" name="email" class="form-control" placeholder="E-mail">
+                <input type="email" name="email" class="form-control" placeholder="E-mail">
               </div>
 
               <div class="form-group">
