--- a/App/Views/app/timeline.phtml
+++ b/App/Views/app/timeline.phtml
@@ -94,9 +94,11 @@
 
 					<br />
 					<form>
+						<?php if ($_SESSION['id'] == $tweet['id_usuario']) {?>
 						<div class="col d-flex justify-content-end">
 							<button type="submit" class="btn btn-danger"><small>Remover</small></button>
 						</div>
+						<?php } ?>
 					</form>
 				</div>
 			</div>
