--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,6 +26,16 @@ h2 {
     font-weight: bold;
 }
 
+a {
+    color: #fff;
+    width: 100%;
+    height: 100%;
+}
+
+a:hover {
+    color: #fff;
+}
+
 .banner {
 	height: 100%;
 	background-color: #1da1f2;
