--- a/App/Views/app/timeline.phtml
+++ b/App/Views/app/timeline.phtml
@@ -107,6 +107,19 @@
 				</div>
 			</div>
 			<?php } ?>
+
+			<div class="row d-flex justify-content-center my-4">
+				<nav aria-label="Page navigation example">
+					<ul class="pagination">
+						<li class="page-item"><a class="page-link" href="#">Previous</a></li>
+						<li class="page-item"><a class="page-link" href="#">1</a></li>
+						<li class="page-item active"><a class="page-link" href="#">2</a></li>
+						<li class="page-item"><a class="page-link" href="#">3</a></li>
+						<li class="page-item"><a class="page-link" href="#">Next</a></li>
+					</ul>
+				</nav>
+			</div>
+
 		</div>
 
 
